# LPS

./: README.md  keypoints_faust_all.kpi
cpp_GI_generation/: CMakeLists.txt  config.ini  readme.md
cpp_GI_generation/include/: GI.h  GPC.h  Generator.h  Heap.h  Ini.h  IniFile.h  Mesh_C.h  Vector3.h  utils.h
cpp_GI_generation/lib/: libcompcur.lib
cpp_GI_generation/src/: gigen.cpp
matlab_LPS/: Laplacian_Energy_Gen.m  comp_geodesics_to_all.mexw64  compute_boundary_all.m  compute_curvature.m  compute_mesh_laplacian_plusA_half.m  compute_mesh_weight_plusA_half.m  libcompcur.h  read_off.m  read_shape.m  shape_diameter.m  symmshlp_matrix.m  symmshlpmatrix.mexw64
python_learning/: classify_gi_by_pidx_and_split.py  descGen.py  tfr_gen.py  train_mincv_perloss6890_256.py  train_softmax6890.py
